Estilizando modal de informações

--- a/techno/style.css
+++ b/techno/style.css
@@ -57,4 +57,111 @@ body {
   color: rgba(0, 0, 0, .5);
 }
 
+
 /* Estilo modal */
+
+.modal::before {
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, .5);
+}
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 80px;
+}
+
+.modal_container {
+  background: linear-gradient(to right, transparent 250px, white 250px);
+  display: grid;
+  grid-gap: 50px;
+  align-items: end;
+  padding: 0px 50px 50px 0;
+  animation: produto .3s forwards;
+}
+
+
+.modal_img {
+  grid: 2;
+  margin-top: 50px;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.modal_img img {
+  max-width: 300px;
+  display: block;
+}
+
+.modal_dados {
+  max-width: 600px;
+}
+
+.modal_titulo {
+  font-size: 3rem;
+}
+
+.modal_btn {
+  margin-top: 80px;
+  background: #000;
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 25px;
+  border: none;
+  font-family: "Noto Serif";
+}
+
+.modal_btn:active {
+  background: #808080;
+}
+
+.modal_btn.esgotado {
+  cursor: initial;
+  opacity: .5;
+}
+
+.modal_fechar {
+  border-radius: 50%;
+  border: 2px solid black;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo das avaliações */
+.avaliacoes {
+  grid-column: 2;
+}
+
+.avaliacao {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+}
+
+.avaliacoess_subtitulo {
+  font-size: 1.75rem;
+}
+
+.avaliacao_descricao {
+  color: rgba(0, 0, 0, .7);
+}
+
+.avaliacao_usuario {
+  font-weight: bold;
+  line-height: 0px;
+}
